<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="vardansharma.me.esspressofun.LoginActivity"
    >

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textEmailAddress"
      android:ems="10"
      android:id="@+id/et_email"
      android:layout_alignParentTop="true"
      android:layout_alignParentStart="true"
      android:hint="Email"
      />
  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword"
      android:ems="10"
      android:id="@+id/et_password"
      android:layout_below="@+id/et_email"
      android:layout_alignParentStart="true"
      android:layout_marginTop="33dp"
      android:hint="Password"
      />
  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Login"
      android:id="@+id/btn_login"
      android:layout_marginTop="62dp"
      android:layout_below="@+id/et_password"
      android:layout_centerHorizontal="true"
      />
</RelativeLayout>
